System Information
Operating system: Linux-5.3.0-40-generic-x86_64-with-Ubuntu-19.10-eoan 64 Bits
Graphics card: GeForce RTX 2060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 435.21
Blender Version
Broken: version: 2.83 (sub 9), branch: master, commit date: 2020-03-16 13:32, hash: rB20f6700c8864
Worked: I don't know which version worked previously. Fresh compilation.
Short description of error
An animated shape key on an appended object is editable only when this object is firstly appended or unique. Appended next objects from the same file are blocked in shapekey animation curves for no apparent reason. Single works, multiple do not.
Exact steps for others to reproduce the error
- Create a shapekey for a default Cube.
- Animate this shapekey to have some action.
- Save file and restart blender.
- Remove default cube and append the one from file saved in (3).
- Check:
- the animation: works
- the editability of animation curves: works, they are editable.
- Append the second cube from the same file (3).
- Editing of curves is blocked for this object, which I consider a bug.
Actions taken to test this further:
- change object name
- change object and object data name
- change object, objdata and shapekeys names
- change shapeaction name
- any change of datablocks do not work.
- setting an override thru outliner do not work (nothing or the above helps)
I don't know if this is by design, or is it some nasty bug, but this problem severely limits my student's work on his MsC. I could not find any solution in the blender.stackexchange or by googling. Please advice and thank you for your hard work!