Fix T74815: Shapekeys animation is blocked after second append of the same object.

Logic to handle shepkeys datablocks in helper in 'make local' code that
checks which ID should be copied, and which can be directly made local,
was wrong.